Resolve url location

--- a/src/index.html
+++ b/src/index.html
@@ -7,83 +7,83 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#5f4b44" />
 
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="images/apple-touch-icon-57x57.png"
+      href="/images/apple-touch-icon-57x57.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
-      href="images/apple-touch-icon-60x60.png"
+      href="/images/apple-touch-icon-60x60.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="images/apple-touch-icon-72x72.png"
+      href="/images/apple-touch-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="images/apple-touch-icon-76x76.png"
+      href="/images/apple-touch-icon-76x76.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="images/apple-touch-icon-114x114.png"
+      href="/images/apple-touch-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="images/apple-touch-icon-120x120.png"
+      href="/images/apple-touch-icon-120x120.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="images/apple-touch-icon-144x144.png"
+      href="/images/apple-touch-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="images/apple-touch-icon-152x152.png"
+      href="/images/apple-touch-icon-152x152.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/apple-touch-icon-180x180.png"
+      href="/images/apple-touch-icon-180x180.png"
     />
 
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="images/favicon-32x32.png"
+      href="/images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="images/android-chrome-192x192.png"
+      href="/images/android-chrome-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="images/favicon-96x96.png"
+      href="/images/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="images/favicon-16x16.png"
+      href="/images/favicon-16x16.png"
     />
 
     <meta name="msapplication-TileColor" content="#5f4b44" />
-    <meta name="msapplication-TileImage" content="images/mstile-144x144.png" />
-    <meta name="msapplication-config" content="images/browserconfig.xml" />
+    <meta name="msapplication-TileImage" content="/images/mstile-144x144.png" />
+    <meta name="msapplication-config" content="/images/browserconfig.xml" />
 
     <style>
       .header-links {
@@ -162,7 +162,7 @@
 
     <noscript><h1>Oops! enable JS for better experience :)</h1></noscript>
 
-    <script src="custom-elements-es5-adapter.js"></script>
+    <script src="/custom-elements-es5-adapter.js"></script>
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
